Ensure download link covers entire button

--- a/@isle-project/components/sketchpad/sketchpad.css
+++ b/@isle-project/components/sketchpad/sketchpad.css
@@ -110,3 +110,14 @@
 	display: none;
 	background: white;
 }
+
+.sketchpad-download-link-btn {
+	padding: 0;
+}
+
+.sketchpad-download-link {
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	padding: 0.375rem 0.75rem;
+}
